tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_17.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((((- x) DIV (+ x)) * ((z DIV 2) * (x * 1223))) * ((+ (0 + x)) * ((+ 1223) MOD (1 + 0))));
               q := (((- (1 MOD z)) MOD ((z * x) DIV (x - x))) > (((200 - 200) * (- 2)) + (- (z * x))));
               r := (~ (((200 - 1) > (+ y)) OR ((1223 # 1) & (2 <= z))));
               x := ((((x DIV 200) DIV (+ 1)) + ((- z) - (200 - 1223))) + (((200 * 1223) MOD (y * 2)) + ((0 MOD 0) - (+ 2))));
               x := ((+ ((+ 1223) DIV (1 MOD 1))) MOD ((- (2 - 1)) DIV ((1 MOD y) MOD (1 + 0))));
               r := ((((- y) + (2 - x)) DIV ((- 0) + (z DIV z))) < ((- (+ y)) DIV ((1 * y) + (- 1223))));
  (* error *)  r := ((((r - z) DIV (2 DIV 1)) + ((2 - 1) DIV (1223 DIV 1223))) >= (- ((200 + 0) MOD (1223 DIV y))));
               p := ((+ (+ (200 DIV x))) >= ((- (- 1223)) MOD ((x DIV z) + (1223 MOD 200))));
               y := ((((0 + 1) MOD (1 - 0)) DIV (- (200 MOD y))) MOD (((z + 1223) + (2 * 1)) MOD (- (1223 - z))));
               q := ((- ((+ x) + (1 - x))) >= (((z MOD x) MOD (2 MOD 1223)) DIV ((+ 1) * (+ 0))))
END Test17.